# ArcadeGameWindow

./: .gitignore  CMakeLists.txt  README.md  app.h  appMenu.c  appMinesweeper.c  appSettings.c  compile.sh  games.c  games.h  imageUtils.c  installer.iss  main  main.c  menu.c  menu.h  musicUtils.c  settings.c  settings.h  statusWindow.c  statusWindow.h  style.css  utils.c  utils.h
apps/: appLuckyGame.c  appMenu.c  appMinesweeper.c  appSettings.c  appTicTacToe.c
utils/: imageUtils.c  musicUtils.c  utils.c
